--- a/src/DevIO.Api/appsettings.json
+++ b/src/DevIO.Api/appsettings.json
@@ -7,5 +7,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DIEGO-PC\\SQLEXPRESS;Initial Catalog=DevIODemoCore;Integrated Security=False;User Id=sa;Password=mudar@123;MultipleActiveResultSets=True"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
   }
 }
